css/style.css
:root {
    --white:#FFFFFF;
    --black:#000000;
    --primary-red:#BD3A5A;
    --off-white:#F8FAFC;
    --secondary-blue:#005A8F;
    --tertiary-navy:#002439;
    --hover-red:#84283F;
} 

.inner-container{
    margin: 0 auto;
    max-width: 1310px;
}

.flex-container {
    display: flex;
    gap: 2.125rem;
}

h1 {
    font-size: 4.5rem;
    font-weight: 700;
    max-width: 18.875rem;
}

.flex-container ul {
    gap: 1.875rem;
    padding: 0;
}

body {
    background-color: var(--off-white);
    font-size: 1.125rem;
    color: var(--black);
    font-family: Arial, Helvetica, sans-serif;
}

.navigation {
    justify-content: space-between;
    align-items: center;
    padding: .625rem 0;
    font-size: 1.25rem;
}

.img-container {
    flex-basis: 1 1 7.5;
}

.banner {
    background-color: var(--secondary-blue);
    justify-content: center;
    flex-shrink: 1;
    align-items: center;
    padding: 5.0625rem 0;
    color: var(--white)
}

.banner p {
    font-size: 2.25rem;
    max-width: 60.875rem;
}

